--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@
 # in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+set(ENV{IDF_TARGET} "esp32s3")
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ina226_esp-idf)
